--- a/montagsmaler.css
+++ b/montagsmaler.css
@@ -1,28 +1,29 @@
 body {
-  background-color: #1e2a3b;
+  background-color: black;
   color: #fff;
   font-family: sans-serif;
   text-align: center;
   --primary-color: #ea580c;
 }
 
+.main-div {
+  display: block;
+  background-color: #1e2a3b;
+  width: 500px;
+  height: 500px;
+  border-radius: 5px;
+  margin-top: 150px;
+  margin-left: 350px;
+}
+
 .heading {
+  padding-top: 100px;
   font-size: 44px;
   color: var(--primary-color);
 }
 
-.your-word-text {
-  margin: 64px 8px 0;
-  font-size: 14px;
-}
-
-.word {
-  margin: 0 0 64px 0;
-  margin-bottom: 64px;
-  font-size: 40px;
-}
-
-.button {
+.main-div-button {
+  margin-top: 100px;
   padding: 18px 72px;
   border: none;
   border-radius: 4px;
@@ -32,13 +33,186 @@ body {
   cursor: pointer;
 }
 
-.previous-word {
-  margin: 48px auto;
-  max-width: 500px;
-  line-height: 24px;
+.feature-div {
+  background-color: #1e2a3b;
+  width: 500px;
+  height: 500px;
+  border-radius: 5px;
+  margin-top: 150px;
+  margin-left: 350px;
+  display: none;
+}
+
+.heading2 {
+  padding: 15px;
+  font-size: 44px;
+  color: var(--primary-color);
+}
+
+.back-to-main-div-button {
+  margin-top: 50px;
+  margin-left: -250px;
+  background-color: #1e2a3b;
+  color: white;
+  border-radius: 5px;
+}
+
+.feature-div-button1 {
+  margin-top: 150px;
+  margin-left: 15px;
+  padding: 18px 72px;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--primary-color);
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+  display: block;
+  height: 25px;
+  width: 475px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feature-div-button2 {
+  margin-top: 10px;
+  margin-left: 15px;
+  padding: 18px 72px;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--primary-color);
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+  display: block;
+  height: 25px;
+  width: 475px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feature-div1 {
+  background-color: #1e2a3b;
+  width: 500px;
+  height: 650px;
+  border-radius: 5px;
+  margin-top: 100px;
+  margin-left: 350px;
+  display: none;
+}
+
+.feature-div1-button {
+  margin-top: 25px;
+  margin-left: -350px;
+  background-color: #1e2a3b;
+  color: white;
+  border-radius: 5px;
+}
+
+.heading3 {
+  font-size: 44px;
+  color: var(--primary-color);
+}
+
+.timerOut {
+  margin-top: 25px;
+}
+
+.your-word-text {
+  margin: 30px 8px 0;
+  font-size: 14px;
+}
+
+.word {
+  margin: 0 0 64px 0;
+  margin-bottom: 64px;
+  font-size: 40px;
+}
+
+.false-button {
+  padding: 18px 72px;
+  border: none;
+  border-radius: 4px;
+  background-color: brown;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.true-button {
+  padding: 18px 72px;
+  border: none;
+  border-radius: 4px;
+  background-color: yellowgreen;
+  color: black;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.previous-words {
   font-weight: 600;
+  margin-top: 50px;
 }
 
 .old-word {
+  margin: 48px auto;
   font-weight: 400;
+}
+
+.feature-div1-repeat {
+  background-color: #1e2a3b;
+  width: 500px;
+  height: 500px;
+  border-radius: 5px;
+  margin-top: 150px;
+  margin-left: 350px;
+  display: none;
+}
+
+.scoreOut {
+  margin-top: 25px;
+  font-size: 35px;
+}
+
+.punkte {
+  margin-top: 25px;
+  font-size: 35px;
+}
+
+.repeat-button {
+  margin-top: 100px;
+  margin-left: 15px;
+  padding: 18px 72px;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(6, 158, 6);
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+  display: block;
+  height: 25px;
+  width: 475px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.back-to-feature-div {
+  margin-top: 25px;
+  margin-left: 15px;
+  padding: 18px 72px;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--primary-color);
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+  display: block;
+  height: 25px;
+  width: 475px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
